Implementar buscador de clientes con archivos FoxPro (MGW10002 y MGW10011)

--- a/src/Blanquita.Web/Components/Layout/NavMenu.razor
+++ b/src/Blanquita.Web/Components/Layout/NavMenu.razor
@@ -6,6 +6,9 @@
         <MudNavLink Href="/productos/buscador" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Search">
             Buscador de Productos
         </MudNavLink>
+        <MudNavLink Href="/clientes" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">
+            Buscador de Clientes
+        </MudNavLink>
         <MudNavLink Href="/etiquetas" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ColorPalette">
             Imprimir etiquetas
         </MudNavLink>
